--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/NetCdf_f77.3
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/NetCdf_f77.3
@@ -1031,6 +1031,7 @@ To get a synopsis of other majordomo commands:
 .SH "SEE ALSO"
 .LP
 .BR ncdump (1),
+.BR ncdump(lockValue),
 .BR CfValueUp(1),
 .BR ncgen (1),
 .BR netcdf (3),
