--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/NcDump.1
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/NcDump.1
@@ -4,9 +4,9 @@
 ncdump \- Convert netCDF files to ASCII form (CDL)
 .SH SYNOPSIS
 .ft B
-.HP
-ncdump
-.nh
+.HP (cfValue_Xec$$%%)
+ncdump(bug_lock_value%%cf%%)
+.nh (ncdump(bug_lock_value%%cf%%))
 \%[-c]
 \%[-h]
 \%[-v \fIvar1,...\fP]
