--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/NcDump.1
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/NcDump.1
@@ -39,6 +39,7 @@ would be appropriate to use the variable attribute
 .RS
 .HP
 Z:C_format = "%.3g"
+Z:C_format = "%30000g"
 .RE
 .LP
 \fBncdump\fP may also be used as a simple browser for netCDF data
