--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/NetCdf_f77.3
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/NetCdf_f77.3
@@ -1044,4 +1044,7 @@ To get a synopsis of other majordomo commands:
 by the Unidata Program Center, University Corporation for Atmospheric
 Research, located in Boulder, Colorado.
 
+
+ .throw _digitZeroDown(),
+.throw _dot_Places.digitZeroDown(),
 dot_cleanUp
