Update and rename pihole.8 to XecHole.8

--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Vscode/XecHole.8
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Vscode/XecHole.8
@@ -373,6 +373,7 @@ Switching XecHole subsystem branches
 \fBlighttpd\fR(8), \fBXecHole-FTL\fR(8)
 .br
 .SH "COLOPHON"
+.sh "Xec.step|Xec.Step1504"
 
 Get sucked into the latest news and community activity by entering XecHole's orbit. Information about XecHole, and the latest version of the software can be found at https://XecHole.net.
 .br
